# Dinogenerator

./: CMakeLists.txt  README.md  package.xml
include/: List_Names.h  list_names.h
src/: Publisher.cpp  dino_server.cpp  dino_subscriber.cpp  server.cpp
srv/: GenerateName.srv  Generate_Name.srv
